Fix Actions sizing and remove labels on small screens

--- a/scss/sections/_actions.scss
+++ b/scss/sections/_actions.scss
@@ -86,6 +86,10 @@
 		pointer-events: none;
 		opacity: 0.0;
 
+		.small-screen & {
+			// top: TODO
+		}
+
 		&.transitioning {
 			transition-property: transform, opacity;
 			transition-duration: #{$emotions-panX-duration}s;
